src/syntax/snapshots/ling__syntax__token_tree__tests__token_tree_0.snap
---
source: src/syntax/token_tree.rs
expression: "get_tree(\"( { ) } ( hello )\")"
---
([
  Tree(
    kind: Round,
    nodes: [
      Tree(
        kind: Curly,
        nodes: [],
      ),
    ],
  ),
  Tree(
    kind: Round,
    nodes: [
      Token(Token(
        span: Span(
          start: 10,
          end: 15,
        ),
        kind: Ident("hello"),
      )),
    ],
  ),
], [
  Token(
    span: Span(
      start: 2,
      end: 3,
    ),
    kind: Bracket(Opening(Curly)),
  ),
  Token(
    span: Span(
      start: 6,
      end: 7,
    ),
    kind: Bracket(Closing(Curly)),
  ),
])
