src/syntax/snapshots/ling__syntax__token_tree__tests__token_tree_1.snap
---
source: src/syntax/token_tree.rs
expression: "get_tree(\"{{{}}}\")"
---
([
  Tree(
    kind: Curly,
    nodes: [
      Tree(
        kind: Curly,
        nodes: [
          Tree(
            kind: Curly,
            nodes: [],
          ),
        ],
      ),
    ],
  ),
], [])
