src/syntax/snapshots/ling__syntax__token_tree__tests__token_tree_3.snap
---
source: src/syntax/token_tree.rs
expression: "get_tree(\")))\")"
---
([], [
  Token(
    span: Span(
      start: 0,
      end: 1,
    ),
    kind: Bracket(Closing(Round)),
  ),
  Token(
    span: Span(
      start: 1,
      end: 2,
    ),
    kind: Bracket(Closing(Round)),
  ),
  Token(
    span: Span(
      start: 2,
      end: 3,
    ),
    kind: Bracket(Closing(Round)),
  ),
])
