src/syntax/snapshots/ling__syntax__token_tree__tests__token_tree_4.snap
---
source: src/syntax/token_tree.rs
expression: "get_tree(\"]{}[\")"
---
([
  Tree(
    kind: Curly,
    nodes: [],
  ),
  Tree(
    kind: Square,
    nodes: [],
  ),
], [
  Token(
    span: Span(
      start: 0,
      end: 1,
    ),
    kind: Bracket(Closing(Square)),
  ),
  Token(
    span: Span(
      start: 3,
      end: 4,
    ),
    kind: Bracket(Opening(Square)),
  ),
])
